--- a/hibernate_tutorial/.classpath
+++ b/hibernate_tutorial/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry kind="lib" path="lib/jandex-2.0.5.Final.jar"/>
 	<classpathentry kind="lib" path="lib/javassist-3.23.1-GA.jar"/>
 	<classpathentry kind="lib" path="lib/javax.activation-api-1.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/javax.persistence-api-2.2.jar" sourcepath="lib/javax.persistence-api-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-logging-3.3.2.Final.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.15.jar"/>
